# app-store

./: .gitignore  Cargo.toml  README.md  build-client.sh  build-dev-dashboard.sh  start.sh  stop.sh
backend/: Cargo.toml
backend/src/: database.rs  graphql.rs  handler.rs  main.rs  models.rs
backend/src/graphql/: mutation.rs  query.rs  root.rs
backend/src/models/: asset.rs  org.rs  profile.rs
backup/client.backup/: package-lock.json  package.json
client/: Cargo.toml
client-cli/: Cargo.toml
client-desktop/: Cargo.toml
client-desktop/src/: store.rs
client-web/: Cargo.toml  index.html
client-web/sass/: style.scss
client-web/src/: components.rs  lib.rs
client-web/src/components/: footer.rs
client-web/src/layouts/: main_layout.rs
client-web/src/pages/: categories.rs  login.rs  settings.rs  updates.rs
client/examples/react-context/: state.js  state_user.js
client/examples/react-context-reducer/: state_consumer.js
client/src/: App.js  data.rs  lib.rs  pages.rs  routes.rs
client/src/components/: content.rs  header.rs  my_applications.js  sidenav.rs  signup.js
client/src/components/admin/: users.js
client/src/components/menu/: menu.js
client/src/components/settings/: email.js  index.js  security.js
client/src/data/: categories.rs
client/src/pages/: add.rs  app_by_name.rs  apps.rs  assets.rs  categories.rs  games.rs  home.rs  login.rs  settings.rs  signup.rs  updates.rs
client/src/reducers/: auth_reducer.js
client/src/routes/: admins.js  guest.js
client/src/utils/: authBox.js
dashboard/: Cargo.toml
desktop/: Cargo.toml
desktop/src/: main.rs
node_server/: KAS.mm  index.js  package-lock.json  package.json
node_server/graphql/: mutation.js  query.js  root.js
node_server/graphql/types/: asset.js  index.js  organization.js  product.js  profile.js  role.js  user.js
node_server/models/: asset.js  index.js  organization.js  product.js  profile.js  role.js  user.js
node_server/utils/: auth.js
pi-web-backend/: .env  Cargo.toml  start.sh
pi-web-backend/src/: main.rs
pi-web-backend/src/database/: mod.rs
pi-web-backend/src/graphql/: mod.rs  mutation.rs  query.rs  root.rs
pi-web-backend/src/handlers/: email.rs
pi-web-backend/src/models/: asset.rs  org.rs  product.rs  profile.rs  role.rs  user.rs
sass/: _config.scss  _util.scss  style.scss
schema/: schema.graphql
schema/mutations/: change_password.graphql  create_assset.graphql  create_org.graphql  create_product.graphql  create_profile.graphql  create_role.graphql  delete_asset.graphql  delete_org.graphql  delete_product.graphql  delete_profile.graphql  delete_role.graphql  delete_user.graphql  request_reset_password.graphql  reset_password.graphql  sign_in.graphql  sign_up.graphql  signup.graphql  update_profile.graphql  update_role.graphql
schema/queries/: asset_by_id.graphql  asset_by_owner.graphql  assets.graphql  org_by_id.graphql  orgs.graphql  orgs_by_owner.graphql  product_by_id.graphql  products.graphql  profile_by_id.graphql  profiles.graphql  profiles_by_owner_id.graphql  role_by_id.graphql  roles.graphql  user_by_email.graphql  user_by_id.graphql  users.graphql  users_by_ids.graphql
server/: Cargo.toml
server/src/: graphql.rs  main.rs
server/src/graphql/: mutation.rs
server/src/models/: product.rs  role.rs  user.rs
static/: .gitignore  application.html  apps.html  dashboard.html  games.html  index.html  login.html  package.json  settings.html  signup.html  update.html
static/css/: style.css
web_client/: package-lock.json  package.json
web_client/examples/react-context/: app.js
web_client/examples/react-context-reducer/: app.js  global_state.js  reducer.js
web_client/public/: index.html  manifest.json
web_client/src/: App.css  App.js  index.js
web_client/src/components/: app_detail.js  app_layout.js  categories.js  description.md  home.js  installed.js  search.js  (+4 more)
web_server/: Cargo.toml  start.sh  stop.sh
web_server/src/: db.rs  handlers.rs  main.rs
web_server/src/schemas/: product.rs  root.rs  user.rs
(+35 files in other folders)
