[package]
name = "backend"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Server
actix-cors = "*"
actix-rt = "*"
actix-web = { version = "*"}
actix-web-actors = "3.0.0"
# Async
futures = "0.3.7"
# GraphQL
async-graphql = "*"
async-graphql-actix-web = "*"
# Database
mongodb = "*"
# Security
jsonwebtoken = "*"
bcrypt = "*"
dotenv = "*"