[package]
name = "backend"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Server
actix-cors = "0.5.4"
actix-rt = "1.1.1"
actix-web = "3.3.2"
# GraphQL
async-graphql = "2.1.7"
async-graphql-actix-web = "2.1.7"
# Database
mongodb = "1.1.1"
bson = "1.1.0"
serde = "1.0.118"
serde_derive = "1.0.118"
futures = "0.3.8"
# Security
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
dotenv = "0.15.0"
# Dev
listenfd = "*"