[package]
name = "client"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.69"
yew-router = "0.14.0"
web-sys = {version = "0.3.46", features = ["console"] }
web_logger = "0.2"