[package]
name = "client"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.69"
yew-router = "0.14.0"
web-sys = {version = "0.3.46", features = ["console", "Storage"] }
web_logger = "0.2"
anyhow = "1.0.37"
graphql_client = {version = "0.9.0", features = ["web"] }
serde = "1.0.118"
serde_json = "1.0.61"
failure = "0.1.8"
http = "0.2.2"
wee_alloc = "0.4.5"