[package]
name = "desktop"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2.0"
vedas_core = { git = "https://github.com/koompi/vedas", branch = "dev"}