[package]
name = "web_server"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.1"

juniper = "0.14"

mongodb="*"
r2d2 = "0.8"
r2d2-mongodb = "*"

dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
bson = "0.14"
listenfd = "0.3"